src/frontend/shared/styles.scss
$white: #fff;
$z-index-base: 2;

 @keyframes pulse {
	 0% { transform: scale(1); }
	 35% { transform: scale(1.1); }
	 60% { transform: scale(1.05); }
	 100% { transform: scale(1); }
 }

.container-youtube,
.container-vimeo {
	font-size: 0;
	line-height: 0;

	noscript {
		display: block;
		font-size: 1rem;
		line-height: 1.2em;
		text-align: left;
    }
}

.preview-lazyload {
	  opacity: 1;
	  position: relative;
	  transition: opacity 0.25s;
}

.js-lazyload--not-loaded .preview-lazyload {
	opacity: 0;
}

.entry-content a.preview-lazyload, a.preview-lazyload {
	background-color: transparent;
	border: 0;
	height: 315px;
	width: 100%;
	max-width: 100%;
	text-decoration: none;
	display: inline-block;
	color: #fff;
	font-family: Arial, serif;
	font-size: 14px;
	margin-top: 0;
	line-height: 18px;
	box-sizing: border-box;
}

a.lazy-load-vimeo {
	text-decoration: none;
}

.lazy-load-div {
	display: table;
	height: 100%;
	width: 100%;

	&::before {
		// NOTE: Don't set a content, color text-shadow value here as we set it in frontend/class-frontend-init-styles.php and the browser would otherwise ignore that inline CSS style.
		// Without content value, the before pseudo-element won't become visible.
		font-size: 50px;
		font-family: Arial, sans-serif;

		opacity: 0.7;
		z-index: $z-index-base + 1;
		
		display: table-cell;
		vertical-align: middle;
		text-align: center;
	}

	&:hover::before {
		opacity: 0.9;
	}
}

.css_white_pulse, .css_black_pulse {
	.lazy-load-div::before {
	    font-size: 70px;
	    animation: pulse 3s infinite linear;
	}
}

a.lazy-load-youtube:hover, .lazy-load-vimeo:hover {
	text-decoration: none;
	cursor: pointer;
}
.lazy-load-div,
.lazy-load-info {
	max-width: 100%;
	opacity: 0.8;
	color: #fff;
}
.lazy-load-div {
	position: absolute;
	z-index: $z-index-base + 1;
}
.lazy-load-info {
	position: relative;
}
.lazy-load-div:hover,
.lazy-load-youtube:hover > div, .lazy-load-vimeo:hover > div {
	opacity: 1;
}

.titletext {
	padding-left: 15px;
	padding-right: 15px;
	position: relative;
	top: 7px;
	text-shadow: none;
	float: left;
	text-transform: none;
	font-weight: normal;
}

.container-youtube embed, .container-youtube iframe, .container-youtube object, .container-youtube video,
.container-vimeo embed, .container-vimeo iframe, .container-vimeo object, .container-vimeo video {
	margin-bottom: 0!important;
}
.entry-content a.lazy-load-youtube, a.lazy-load-youtube, .lazy-load-vimeo {
	margin-bottom: 0!important;
	iframe {
		margin-bottom: 0!important;
	}
}

a.lazy-load-youtube {
    // Prevent plugins such as BBPress from making this link "inline"
    display: block !important;
}

/** Fix styling issue caused by block editor in certain themes. We're manually calculating the ratio in JS instead of relying on the WordPress "padding-top" hack. */
.wp-embed-responsive .wp-block-embed[class*="wp-embed-aspect-"] {
    position: relative;

    .container-lazyload {
        position: absolute;
        left: 0;
        top: 0;
        height: 100%;
        width: 100%;
    }
}

.lazy-load-block-play {
	cursor: pointer;
}

.lazy-load-block-play .preview-lazyload {
	pointer-events: none;
}

